2-services/echoapp-clusterip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoapp-service
  labels:
    app: echoapp
    process: echoapp-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: echoapp
    process: echoapp-web
