2-services/echoapp-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoapp-service
  labels:
    app: echoapp
    process: echoapp-web
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
      nodePort: 30036
  selector:
    app: echoapp
    process: echoapp-web
